# cairn

./: .air.toml  .gitignore  .goreleaser.yaml  .mcp.json.bak  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  SPEC.md  go.mod  go.sum  install.sh
.cairn/: FRICTION.md  WORKFLOW.md  config.yaml
.cairn/sessions/: ses_0275164806eb8ffcd2ce900a.yaml  ses_04418ccf7e0048fa10f6f709.yaml  ses_04c57c07e05a035288a69c12.yaml  ses_07d73d8770a7816997bca35a.yaml  ses_2224a25f2c5f288e7161a64c.yaml  ses_283016e38bca2572c433e59e.yaml  ses_360973f54bf19b1ff27931b4.yaml  ses_39ca85c3d215adba8faf8196.yaml  ses_42980a7c02f8551da745827c.yaml  ses_45e4280ed463816c9a4d8582.yaml  ses_52784d175e94376a01882ea4.yaml  ses_6527d717c6c494c0d45cee83.yaml  ses_65a3044eee053f620087209e.yaml  ses_6de3a97b7e1be6c7dc1fa08a.yaml  ses_7481354ae28f33505dd4e89d.yaml  ses_7929787f40209bbf5040600a.yaml  (+18 more)
.codex/: config.toml  config.toml.bak
desktop/: package.json
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/autogenerated/: update_tray.toml
desktop/src-tauri/src/: lib.rs
docs/: README.md  agent-sessions.md  connect-claude.md  getting-started.md  index.md  installation.md  introduction.md  mcp-tools.md  package-lock.json  package.json  quickstart.md  task-files.md
scripts/: build-sidecar.mjs  keep-dist.mjs  set-desktop-version.mjs
web/: components.json  embed.go  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
(+189 files in other folders)
